src/objects/Flashcard__c.object
<CustomObject>
    <fields>
        <fullName>Chinese_Term__c</fullName>
        <label>Chinese Term</label>
        <referenceTo>Chinese_Term__c</referenceTo>
        <relationshipLabel>Flashcards</relationshipLabel>
        <relationshipName>Flashcards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Level__c</fullName>
        <label>New Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Times_Incorrect__c</fullName>
        <label>Number of Times Incorrect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Level__c</fullName>
        <label>Original Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Flashcards</relationshipLabel>
        <relationshipName>Flashcards</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Flashcard</label>
    <nameField>
        <displayFormat>FL-{0000000}</displayFormat>
        <label>Flashcard Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flashcards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>